k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-news
  labels:
    app: kube-news
