k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-news
  namespace: kube-news
  labels:
    app: kube-news
    component: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: kube-news.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-news
                port:
                  name: http
